cmake_minimum_required(VERSION 3.12)
project(MPM)

set(CMAKE_CXX_STANDARD 14)
find_package(Eigen3 REQUIRED)
#include_directories(/usr/local/include)
include(partio.cmake)
file(GLOB SRC "*.h" "*.cpp")
#add_executable(MPM main.cpp Particle.h Particle.cpp Constants.h Grid.h Grid.cpp Thing.h Thing.cpp)
add_executable(MPM test.cpp)
#target_link_libraries(MPM Partio)
#add_dependencies(MPM partio-dl)
target_link_libraries (MPM Eigen3::Eigen)
